# anequim

./: CITATION.cff  INSTALL.md  LICENSE  README.md  pyproject.toml
anequim/: __init__.py
docs/: ARCHITECTURE.md  METHODOLOGY.md
examples/: make_synthetic_obpg_multiband_file.py  make_synthetic_olci_directory.py  make_synthetic_pace_file.py  quickstart.py
src/anequim/: __init__.py  cli.py
src/anequim/algorithms/: __init__.py  base.py  giop.py  gsm.py  qaa.py
src/anequim/atmosphere/: __init__.py  frouin_irradiance.py
src/anequim/core/: __init__.py  anequim.py  config.py  exceptions.py  flags.py  provenance.py  qc.py  spectral_cube.py  time_utils.py
src/anequim/download/: __init__.py  ancillary.py  copernicus.py  earthdata.py  eumetsat.py
src/anequim/geometry/: __init__.py  distance.py  nearest.py  pixel_size.py
src/anequim/harmonization/: __init__.py  convolve.py  interpolate.py
src/anequim/plot/: __init__.py  spectrum.py
src/anequim/readers/: __init__.py  _obpg_multiband.py  _stub.py  base.py  modis.py  olci.py  pace_oci.py  registry.py  viirs.py
src/anequim/roi/: __init__.py  base.py  bbox.py  circular.py  pixel.py  polygon.py  rectangular.py
src/anequim/statistics/: __init__.py  spectral_stats.py
tests/: conftest.py  test_download.py  test_download_ancillary.py  test_download_copernicus.py  test_download_copernicus_refresh.py  test_download_eumetsat_and_modis_viirs.py  test_flags_qc.py  test_geometry.py  test_integration_anequim.py  test_modis_viirs_readers.py  test_olci_reader.py  test_roi.py  test_statistics.py
(+3 files in other folders)
